--- a/src/Components/TransactionList/TransactionList.css
+++ b/src/Components/TransactionList/TransactionList.css
@@ -18,7 +18,7 @@
     table-layout: fixed;
     border-collapse: collapse;
     width: 100%;
-    height: 90%;
+    height: calc(100% - 52px);
     padding: 0;
     color: #333;
 }
